deploy/service-reg.yaml
apiVersion: v1
kind: Service
metadata:
  name: reg-service
spec:
  selector:
    app: reg-pod
  ports:
    - protocol: TCP
      port: 88
      targetPort: registry-port
